src/components/pages/Home/styles.module.css
.main {
  width: 100%;
  min-height: 100vh;
}

.navbar {
  visibility: hidden;
  position: fixed;
  top: 0;
  z-index: 1;
  transform: translateY(-80px);
  transition: all 0.3s ease-in-out;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  z-index: 100;
}

.navbarShow {
  transform: translateY(0);
}

.overflowHidden {
  width: 100%;
  overflow: hidden;
}

/* Extra small devices */
@media (min-width: 320px) {
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
}

@media (min-width: 1024px) {
  .navbar {
    visibility: visible;
  }
}

/* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
}

